# Metatrader-5-MCP-UI

./: .env.example  .gitattributes  .gitignore  .pylintrc  CONTRIBUTING.md  HACKATHON_SUBMISSION.md  LICENSE  PROMOTION.md  README.md  init-repo.ps1  init-repo.sh  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/mt5_mcp_ui/: __init__.py  __main__.py  app.py
